<resources>
    <string name="app_name">CAMs</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email_optional">Email (optional)</string>
    <string name="email">E-mail</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_harvest_entry">Add Harvest Entry</string>
    <string name="pangalan_ng_nagtala">Pangalan ng Nagtala</string>
    <string name="barangay">Barangay</string>
    <string name="example">Ex. Juan Dela Cruz</string>
    <string name="enter_here">Enter here.</string>
    <string name="contact_number_magsasaka">Contact Number (Magsasaka)</string>
    <string name="kaarawan_ng_magsasaka">Kaarawan ng Magsasaka</string>
    <string name="edad">Edad</string>
    <string name="gender">Gender</string>
    <string name="m_f">M / F</string>
    <string name="lokasyon_ng_pinagtaniman">Lokasyon ng Pinagtaniman</string>
    <string name="total_physical_area">Total Physical Area (in ha)</string>
    <string name="commodity">Commodity</string>
    <string name="select">Select</string>
    <string name="type">Type</string>
    <string name="kaarawan_magsasaka">Kaarawan (Magsasaka)</string>
    <string name="area_planted">Area Planted</string>
    <string name="date_planted">Date Planted</string>
    <string name="expected_harvest_date">Expected Harvest Date</string>
    <string name="expected_yield_in_tons">Expected Yield (in tons)</string>
    <string name="percentage_damage">Percentage Damage</string>
    <string name="actual_yield">Actual Yield</string>
    <string name="date_of_actual_harvest">Date of Actual Harvest</string>
    <string name="you_can_update_your_data_after_harvest">You can update your data after harvest.</string>
    <string name="after_harvest_data">After Harvest Data</string>
    <string name="remarks">Remarks</string>
    <string name="pangalan_ng_magsasaka">Pangalan ng Magsasaka</string>
    <string name="_09xxxxxxxxx">09xxxxxxxxx</string>
    <string name="mm_dd_yy">MM/DD/YYYY</string>
    <string name="create">Create</string>
    <string name="variety">Variety</string>
    <string name="petsa_kung_kailan_tinala">Petsa kung Kailan Tinala</string>
    <string name="creating_entry">Creating entry...</string>
    <string name="logout">Logout</string>
    <string name="barangay_city_province">Barangay, City, Province</string>
    <string name="date">Date</string>
    <string name="view_update">View/Update</string>
    <string name="crop">Crop</string>
    <string name="holder">Holder</string>
    <string name="details">Details</string>
    <string name="crop_details">Crop Details</string>
    <string name="person_details">Person Details</string>
    <string name="name_of_encoder">Name of Encoder</string>
    <string name="name_of_farmer">Name of Farmer</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="location">Farm Location</string>
    <string name="contact_number">Contact Number</string>
    <string name="update">Update</string>
    <string name="Loading">Loading...</string>
    <string name="delete">Delete</string>
    <string name="update_harvest_entry">Update harvest entry</string>
    <string name="damage">Damage</string>
    <string name="entry_create">Entries will appear here once created.</string>
</resources>