<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ReportDetails"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="16sp"
        android:textColor="@color/skyblue" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/personHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_details"
        android:gravity="start"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="2sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_encoder"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_farmer"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barangay"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_physical_area"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/recENam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recDEnc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recFNam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recCNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recBir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recGen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recFLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recTAre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/cropHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crop_details"
        android:gravity="start"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold" 
        android:layout_margin="2sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crop"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/variety"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area_planted"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expected_yield_in_tons"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actual_yield"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percentage_damage"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_planted"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expected_harvest_date"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_actual_harvest"
                android:textColor="@color/black"
                android:layout_margin="2sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
            android:id="@+id/recCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holder"
            android:textColor="@color/green"
            android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recTyp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recVar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recPAre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recEYie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recAYie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recPDam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recDPla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recEHar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
            <TextView
                android:id="@+id/recAHar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/holder"
                android:textColor="@color/green"
                android:layout_margin="2sp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remarks"
        android:gravity="start"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="2sp"/>
    <TextView
        android:id="@+id/recRem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/holder"
        android:gravity="start"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_margin="2sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updatebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:padding="16sp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deletebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="16sp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:backgroundTint="@color/red"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>