<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".login">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:paddingTop="32dp">

      <ImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:src="@drawable/logo" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_height="wrap_content"
          android:layout_width="match_parent">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:padding="18dp"
            android:background="@drawable/edittext">
          </com.google.android.material.textfield.TextInputEditText>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_height="wrap_content"
          android:layout_width="match_parent">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:padding="18dp"
            android:background="@drawable/edittext">
          </com.google.android.material.textfield.TextInputEditText>

      </com.google.android.material.textfield.TextInputLayout>

      <ProgressBar
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/progressBar"
          android:visibility="gone" />

  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/backli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/skyblue"
            android:text="@string/back"
            android:textSize="20sp"
            android:gravity="left"/>

        <TextView
            android:id="@+id/redirectsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:gravity="right"
            android:textSize="20sp"
            android:textColor="@color/skyblue"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="center"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>