<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    app:cardElevation="8dp"
    android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/clipboard"
                app:tint="@color/green"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/crop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/crop"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/view_update"
                android:gravity="center_vertical|end"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:textColor="@color/green"/>
        </LinearLayout>

</androidx.cardview.widget.CardView>